--- a/cise_ass1a_worksheet4/frontend/package.json
+++ b/cise_ass1a_worksheet4/frontend/package.json
@@ -25,5 +25,8 @@
     "sass": "^1.66.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^2.7.6"
   }
 }
